Issue #4 Aggiunta gestione dei destinatari multipli della mail.